[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "PyLab-ML"
dynamic = ["version"]
description = "Measurement library for instruments, especially for ATE test"
readme = {file = "README.md", content-type = "text/markdown"}
license = "GPL-2.0-only"
authors = [
    { name = "The Semi-ATE Project Contributors", email = "ate.organization@gmail.com" }
]
requires-python = ">= 3.9"
keywords = [
    "Semiconductor",
    "ATE",
    "Automatic Test Equipment",
    "Spyder",
    "Plugin"
]
classifiers = [
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Electronic Design Automation (EDA)",
    "Topic :: Scientific/Engineering :: Human Machine Interfaces",
    "Topic :: Scientific/Engineering :: Interface Engine/Protocol Translator",
    "Topic :: Software Development :: Build Tools",
    "Topic :: Software Development :: Code Generators",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Quality Assurance"
]
dependencies = [
    "hightime",
	"h5py",
	"ipywidgets",
	"nidcpower==1.4.2",
	"nidmm==1.4.2",
	"niscope==1.4.1",
	"nitclk==1.4.1",	
	"matplotlib",
    "paho-mqtt",
    "pandas",
	"psutil",
	"PyQt5",
	"pythonnet",
	"pyserial",
	"pyvisa",
	"pyvisa-py",
	"regex",
    "semi-ate-common",
]

[project.optional-dependencies]
test = [
    "pytest==7.1.1",
]

[project.urls]
	repository = "https://github.com/Semi-ATE/PyLab-ML"
	Documentation = "https://semi-ate.github.io/PyLab-ML"

[tool.hatch.version]
	path = "pylab_ml/__init__.py"

[tool.hatch.build.targets.wheel]
	packages = [
		"pylab_ml"
	]

[project.entry-points."ate.org"]
    pylabml = "pylab_ml.plugins.pylabml.instruments:Plugin"